--- a/Readify (Remake)/Domain/FocusReading/FocusReading.storyboard
+++ b/Readify (Remake)/Domain/FocusReading/FocusReading.storyboard
@@ -177,7 +177,7 @@
                                                 </buttonConfiguration>
                                                 <connections>
                                                     <action selector="didCompleteTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="wGj-KG-U1x"/>
-                                                    <segue destination="ioY-PH-fsV" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="coverVertical" id="Eav-eu-WBq"/>
+                                                    <segue destination="ioY-PH-fsV" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="Eav-eu-WBq"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -378,6 +378,9 @@
                                                 <buttonConfiguration key="configuration" style="filled" image="play" catalog="system" title="Play" imagePadding="4">
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <segue destination="pvd-gS-x2h" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="nua-73-DcO"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -411,6 +414,121 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9FR-Js-PBL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="27" y="899"/>
+        </scene>
+        <!--Update Progress View Controller-->
+        <scene sceneID="kc1-ey-jts">
+            <objects>
+                <viewController id="pvd-gS-x2h" customClass="UpdateProgressViewController" customModule="Readify__Remake_" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QUR-uJ-ctN">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MNu-5L-dd9">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <navigationItem title="Update Reading Progress" id="ikB-rP-ufC"/>
+                                </items>
+                            </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1aU-aX-A97">
+                                <rect key="frame" x="0.0" y="44" width="393" height="808"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="BCT-Ze-ygA">
+                                        <rect key="frame" x="20" y="20" width="353" height="689.66666666666663"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FinishRead" translatesAutoresizingMaskIntoConstraints="NO" id="XgO-V0-yfo">
+                                                <rect key="frame" x="20" y="48" width="313" height="281"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congrats! Another Little Step to Your Reading Goals!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="isC-7w-qNu">
+                                                <rect key="frame" x="20" y="361" width="313" height="57.333333333333314"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6fG-bz-YNb">
+                                                <rect key="frame" x="20" y="450.33333333333337" width="313" height="67.333333333333371"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY PROGRESS TODAY" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sye-Y0-G2C">
+                                                        <rect key="frame" x="-20" y="0.0" width="353" height="14.333333333333334"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                        <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Input Your Latest Page" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hJi-zb-4J3">
+                                                        <rect key="frame" x="-20" y="22.333333333333258" width="353" height="45"/>
+                                                        <color key="backgroundColor" systemColor="quaternarySystemFillColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="45" id="bwS-wu-igC"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                    </textField>
+                                                </subviews>
+                                                <edgeInsets key="layoutMargins" top="0.0" left="-20" bottom="0.0" right="-20"/>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cVQ-PR-AgA">
+                                                <rect key="frame" x="20" y="549.66666666666663" width="313" height="108"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v7I-bf-Qna">
+                                                        <rect key="frame" x="0.0" y="0.0" width="313" height="50"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="50" id="66q-Jw-OK1"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="filled" image="arrow.up.circle" catalog="system" title="Update My Progress" imagePadding="4">
+                                                            <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
+                                                        </buttonConfiguration>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mil-J5-dJS">
+                                                        <rect key="frame" x="0.0" y="58" width="313" height="50"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="50" id="ake-Mh-hu4"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="tinted" image="checkmark.circle" catalog="system" title="Complete Reading Goal" imagePadding="4">
+                                                            <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
+                                                        </buttonConfiguration>
+                                                        <connections>
+                                                            <segue destination="ioY-PH-fsV" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="00C-5I-24p"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <edgeInsets key="layoutMargins" top="48" left="20" bottom="32" right="20"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="BCT-Ze-ygA" firstAttribute="top" secondItem="1aU-aX-A97" secondAttribute="top" constant="20" id="Iyr-Zm-9y2"/>
+                                    <constraint firstAttribute="trailing" secondItem="BCT-Ze-ygA" secondAttribute="trailing" constant="20" id="Uco-ff-PqF"/>
+                                    <constraint firstItem="BCT-Ze-ygA" firstAttribute="leading" secondItem="1aU-aX-A97" secondAttribute="leading" constant="20" id="utf-Rp-ACf"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dpT-Je-Pig"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MNu-5L-dd9" firstAttribute="top" secondItem="dpT-Je-Pig" secondAttribute="top" id="ECL-ud-V9r"/>
+                            <constraint firstAttribute="bottom" secondItem="1aU-aX-A97" secondAttribute="bottom" id="RxD-OW-lbk"/>
+                            <constraint firstItem="1aU-aX-A97" firstAttribute="top" secondItem="MNu-5L-dd9" secondAttribute="bottom" id="Z2l-0V-h3B"/>
+                            <constraint firstItem="MNu-5L-dd9" firstAttribute="leading" secondItem="dpT-Je-Pig" secondAttribute="leading" id="a8O-Wb-Jno"/>
+                            <constraint firstItem="1aU-aX-A97" firstAttribute="trailing" secondItem="dpT-Je-Pig" secondAttribute="trailing" id="a9f-kL-k9H"/>
+                            <constraint firstItem="MNu-5L-dd9" firstAttribute="trailing" secondItem="dpT-Je-Pig" secondAttribute="trailing" id="upS-U3-ZWb"/>
+                            <constraint firstItem="1aU-aX-A97" firstAttribute="leading" secondItem="dpT-Je-Pig" secondAttribute="leading" id="yIb-P4-Vqm"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2H2-Tz-Ryw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="951.90839694656484" y="898.59154929577471"/>
         </scene>
         <!--Complete View Controller-->
         <scene sceneID="2iT-BL-jPV">
@@ -503,10 +621,10 @@
                         <constraints>
                             <constraint firstItem="lRq-tf-mCg" firstAttribute="top" secondItem="gqn-tK-DHh" secondAttribute="bottom" id="5FT-Zb-vX6"/>
                             <constraint firstAttribute="bottom" secondItem="lRq-tf-mCg" secondAttribute="bottom" id="8Zz-Th-jWa"/>
+                            <constraint firstItem="lRq-tf-mCg" firstAttribute="trailing" secondItem="R47-4j-nnR" secondAttribute="trailing" id="90d-YS-LXl"/>
                             <constraint firstItem="gqn-tK-DHh" firstAttribute="leading" secondItem="R47-4j-nnR" secondAttribute="leading" id="HBZ-po-Had"/>
                             <constraint firstItem="gqn-tK-DHh" firstAttribute="top" secondItem="R47-4j-nnR" secondAttribute="top" id="VEt-rP-tY9"/>
                             <constraint firstItem="lRq-tf-mCg" firstAttribute="leading" secondItem="R47-4j-nnR" secondAttribute="leading" id="fuR-yG-7wS"/>
-                            <constraint firstItem="lRq-tf-mCg" firstAttribute="trailing" secondItem="R47-4j-nnR" secondAttribute="trailing" id="pZk-XX-Uqx"/>
                             <constraint firstItem="gqn-tK-DHh" firstAttribute="trailing" secondItem="R47-4j-nnR" secondAttribute="trailing" id="y9P-YO-JEd"/>
                         </constraints>
                     </view>
@@ -661,11 +779,14 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Kyu-Aq-EhR"/>
+        <segue reference="00C-5I-24p"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="EmptyGoal" width="258" height="263"/>
         <image name="FinishGoal" width="286" height="280"/>
+        <image name="FinishRead" width="302" height="281"/>
         <image name="Reading" width="255" height="252"/>
+        <image name="arrow.up.circle" catalog="system" width="128" height="123"/>
         <image name="book" catalog="system" width="128" height="99"/>
         <image name="checkmark.circle" catalog="system" width="128" height="123"/>
         <image name="house" catalog="system" width="128" height="104"/>
@@ -675,6 +796,9 @@
         <image name="square.and.arrow.down.fill" catalog="system" width="121" height="128"/>
         <image name="trash" catalog="system" width="117" height="128"/>
         <image name="xmark.circle" catalog="system" width="128" height="123"/>
+        <systemColor name="quaternarySystemFillColor">
+            <color red="0.45490196078431372" green="0.45490196078431372" blue="0.50196078431372548" alpha="0.080000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
